# myskk

./: Cargo.toml  README.md  rustfmt.toml
crates/ruskk_kana/: Cargo.toml
crates/ruskk_keys/: Cargo.toml
crates/ruskk_keys/src/: errors.rs  event.rs  lib.rs
crates/ruskk_keys/src/event/: key.rs  modifiers.rs
crates/ruskk_keys/src/implementations/: b_tree.rs
crates/ruskk_keys/src/implementations/x11/: compatible.rs  mod.rs  modifiers.rs
ruskk_default/: Cargo.toml
ruskk_default/src/: key_event.rs  main.rs
ruskk_keys/: Cargo.toml
