[package]
name = "ruskk_default"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
ruskk_keys = {path = "../crates/ruskk_keys"}
x11-keysymdef = { git = "https://github.com/divvun/xkb-parser"}
