[package]
name = "ruskk_default"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
smol_str="0.1"
ruskk_keys = { path = "../crates/ruskk_keys", features = ["x11"] }
x11-keysymdef = { git = "https://github.com/divvun/xkb-parser" }
